Since php-library v1.1.0

Geo_Plugin: collect method base sub-array location parameter prefixed with https/http query and added as a special parameter in base sub-array.