@@ -24,4 +24,6 @@ $text = '<b>Lorem Ipsum</b> is simply <i>dummy</i> text of the printing and type
 $string = phplibrary\Format::string($text, 0, 50);
 echo $string . '<br/>';
 
-echo phplibrary\Format::price_format(104955.54);
+echo phplibrary\Format::price_format(104955.54) . '<br/>';
+
+echo phplibrary\Format::array_to_string(array('csv', 'txt', 'php'), ',') . '<br/>';
