@@ -1,3 +1,4 @@
 Since php-library v1.1.0
 
-Geo_Plugin: collect method base sub-array location parameter prefixed with https/http query and added as a special parameter in base sub-array.
+Format: array_to_string method created
+Geo_Plugin: collect method base sub-array location parameter prefixed with https/http query and added as a special parameter in base sub-array
